k8s/apps/_retired/jupyter/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: quay.io/jupyter/base-notebook:2025-11-24@sha256:efaf0d197ce8ced5b0179e73b9bb52f6f13367186df647aa8275c5d3cbd364f5
          workingDir: /work
          command:
            - jupyter
            - lab
            - --ServerApp.ip="*"
            - --ServerApp.allow_remote_access=True
            - --ServerApp.websocket_url="wss://jupyter.starry.blue"
            - --ServerApp.open_browser=False
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: work
              mountPath: /work
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: work
          hostPath:
            path: /mnt/local/jupyter/work
            type: DirectoryOrCreate
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
